--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,12 @@
 sudo: false
-addons:
-  apt:
-    packages:
-    - libsodium-dev
 language: rust
 rust:
   - stable
   - beta
   - nightly
+before_script:
+  - wget https://download.libsodium.org/libsodium/releases/libsodium-1.0.3.tar.gz
+  - tar -xzvf libsodium-1.0.3.tar.gz
+  - cd libsodium-1.0.3 && ./configure --prefix=$HOME/.local && make && make install
+  - export PKG_CONFIG_PATH=$PKG_CONFIG_PATH:$HOME/.local/lib/pkgconfig
 after_success: cargo doc && curl https://raw.githubusercontent.com/myfreeweb/autodocs/master/travis-doc-upload.sh | sh
