--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,4 +14,4 @@ documentation = "https://myfreeweb.github.io/autodocs/colorhash256/colorhash256"
 name = "colorhash256"
 
 [dependencies]
-sodiumoxide = "*"
+tiny-keccak = { git = "https://github.com/quininer/tiny-keccak.git", branch = "no_std" }
